--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,12 @@
 
     <div class="wrapper">
         {{ content }}
+        <div class="footer">
+            <p title="Took this theme from here: http://erictreacy.me">&copy; 2017 </p>
+        </div>
     </div>
+
+
 
 </body>
 
