--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,8 @@
     <link rel="icon" href="/assets/img/blog.png">
     <link href="https://fonts.googleapis.com/css?family=Alegreya|Roboto|Roboto+Mono" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/assets/css/main.css">
+
+    {%seo%}
 </head>
 
 <body>
