--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,6 +19,9 @@ layout: default
     <div class="post__title">
     	<h1>{{ page.title }}</h1>
     </div>
+    <div class="post__subtitle">
+      <h2>{{ page.subtitle}}</h2>
+    </div>
     <div class="post__date">
     	<p>{{ page.date | date: '%B %-d, %Y' }}</p>
     </div>
