--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,6 +1,4 @@
 ---
-title: Page Does Not Exist...
-permalink: "/404.html"
 layout: default
 ---
 
@@ -15,11 +13,6 @@ layout: default
     </ul>
 </div>
 
-
-<br>
-<p>404.</p>
-<br />
-<br />
-<div class="footer">
-    <p>&copy; 2017 <a href="http://itsvismay.github.io">Vismay</a>, wuz here.</p>
+<div>
+	{{content}}
 </div>
