--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,6 +24,15 @@
     <link href="https://fonts.googleapis.com/css?family=Alegreya|Roboto|Roboto+Mono" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/assets/css/main.css">
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-10P5RY2TBP"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-10P5RY2TBP');
+    </script>
     {% seo %}
 </head>
 
